--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "mili"
 version = "0.1.0"
 description = ""
 authors = ["Osvaldo Santana Neto <osantana@osantana.me>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
